# YUView

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .qmake.conf  .qmake.stash  .travis.yml  CMakeLists.txt  Doxyfile  FileInfoGroupBox.cpp  HACKING.md  Info.plist  LICENSE.GPL3  Makefile  README.md  WindowsAppIcon.rc  YUView.desktop  YUView.pro  YUView.pro.user.3.2-pre1  anaglyphrenderer.cpp  anaglyphrenderer.h  appveyor.yml  cameraparameter.cpp  cameraparameter.h  codeship-services.yml  codeship-steps.yml  de.rwth_aachen.ient.YUView.yaml  defaultrenderer.cpp  defaultrenderer.h  deployment_linux.sh  deployment_mac.sh  deployment_win.bat  deployment_win_mingwx64.nsi  deployment_win_mingwx64_devnew.nsi  differenceobject.cpp  differenceobject.cpp~  differenceobject.h  displayobject.cpp  displayobject.h  displaysplitwidget.cpp  (+106 more)
YUViewApp/: CMakeLists.txt  YUViewApp.pro
YUViewApp/images/: WindowsAppIcon.aps  YUView.icns
YUViewApp/src/: yuviewapp.cpp
YUViewLib/: CMakeLists.txt  YUViewLib.pro
YUViewLib/docs/: about.html  docs.qrc  help.html  help_YUVSubsamplingChromaPositions.tikz
YUViewLib/externalLibs/LibFFmpeg++/: Decoder.cpp  Decoder.h  Demuxer.cpp  Demuxer.h  LibFFmpeg.h  libFFmpeg++.pro
YUViewLib/images/: images.qrc
YUViewLib/shaders/: fragmentYUV2RGBshader.glsl  shaders.qrc  vertexshader.glsl
YUViewLib/src/common/: Color.cpp  Color.h  EnumMapper.h  Error.h  EventSubsampler.h  FileInfo.cpp  FileInfo.h  Formatting.h  Functions.cpp  Functions.h  FunctionsGui.cpp  FunctionsGui.h  InfoItemAndData.h  Logging.cpp  Logging.h  NewEnumMapper.h  SaveUi.h  TemporaryFile.cpp  TemporaryFile.h  Typedef.h  YUViewDomElement.cpp  YUViewDomElement.h  YUViewInstanceInfo.cpp  YUViewInstanceInfo.h  fileInfo.h  functions.cpp  functions.h  functionsGui.cpp  functionsGui.h  saveUi.h  typedef.cpp  typedef.h
YUViewLib/src/decoder/: decoderBase.cpp  decoderBase.h  decoderDav1d.cpp  decoderDav1d.h  decoderFFmpeg.cpp  decoderFFmpeg.h  decoderHM.cpp  decoderHM.h  decoderLibde265.cpp  decoderLibde265.h  decoderTarga.cpp  decoderTarga.h  decoderVTM.cpp  decoderVTM.h  decoderVVCDec.cpp  decoderVVCDec.h  decoderVVDec.cpp  decoderVVDec.h
YUViewLib/src/ffmpeg/: AVCodecContextWrapper.cpp  AVCodecContextWrapper.h  AVCodecIDWrapper.h  AVCodecParametersWrapper.cpp  AVCodecParametersWrapper.h  AVCodecWrapper.cpp  AVCodecWrapper.h  AVDictionaryWrapper.h  AVFormatContextWrapper.cpp  AVFormatContextWrapper.h  AVFrameSideDataWrapper.cpp  AVFrameSideDataWrapper.h  AVFrameWrapper.cpp  AVFrameWrapper.h  AVInputFormatWrapper.cpp  AVInputFormatWrapper.h  AVMotionVectorWrapper.cpp  AVMotionVectorWrapper.h  AVPacketWrapper.cpp  AVPacketWrapper.h  AVPixFmtDescriptorWrapper.cpp  AVPixFmtDescriptorWrapper.h  AVStreamWrapper.cpp  AVStreamWrapper.h  FFMpegLibrariesHandling.cpp  FFMpegLibrariesHandling.h  FFMpegLibrariesTypes.cpp  FFMpegLibrariesTypes.h  FFmpegLibraryFunctions.cpp  FFmpegLibraryFunctions.h  FFmpegVersionHandler.cpp  FFmpegVersionHandler.h  Functions.cpp  Functions.h  LibraryLoader.cpp  LibraryLoader.h  MotionVector.cpp  MotionVector.h
YUViewLib/src/filesource/: DataSourceLocalFile.cpp  DataSourceLocalFile.h  FileSource.cpp  FileSource.h  FileSourceAnnexBFile.cpp  FileSourceAnnexBFile.h  FileSourceFFmpegFile.cpp  FileSourceFFmpegFile.h  FileSourceOBUFile.cpp  FileSourceOBUFile.h  GuessFileFormatFromName.cpp  GuessFileFormatFromName.h  GuessFormatFromName.cpp  GuessFormatFromName.h  IDataSource.h  InputFormat.h  fileSource.cpp  fileSource.h  fileSourceAnnexBFile.cpp  fileSourceAnnexBFile.h  fileSourceFFmpegFile.cpp  fileSourceFFmpegFile.h
YUViewLib/src/handler/: ItemMemoryHandler.cpp  SingleInstanceHandler.cpp  SingleInstanceHandler.h  UpdateHandler.cpp  UpdateHandler.h  UpdateHandlerFile.cpp  UpdateHandlerFile.h  itemMemoryHandler.cpp  itemMemoryHandler.h  singleInstanceHandler.cpp  updateHandler.cpp  updateHandler.h  updateHandlerFile.cpp  updateHandlerFile.h
YUViewLib/src/parser/: AV1OBU.cpp  AV1OBU.h  AVFormat.cpp  AVFormat.h  AnnexB.cpp  AnnexB.h  AnnexBAVC.cpp  AnnexBAVC.h  AnnexBHEVC.cpp  AnnexBHEVC.h  AnnexBItuTT35.h  (+51 more)
YUViewLib/ui/: FrameHandler.ui  LoggingViewer.ui  bitstreamAnalysisWidget.ui  frameHandler.ui  mainwindow.ui  mainwindow_performanceTestDialog.ui  playbackController.ui  playlistItem.ui  playlistItemCompressedFile.ui  playlistItemHEVCNextGenFile.ui  playlistItemIndexed.ui  playlistItemResample.ui  playlistItemStatic.ui  playlistItemText.ui  settingsDialog.ui  splitViewWidgetControls.ui  statisticHandler.ui  statisticUIHandler.ui  statisticsStyleControl_ColorMapEditor.ui  statisticsstylecontrol.ui  videoHandlerDifference.ui  videoHandlerRGB.ui  videoHandlerRGB_CustomFormatDialog.ui  videoHandlerResample.ui  videoHandlerYUV_CustomFormatDialog.ui
YUViewUnitTest/: CMakeLists.txt  YUViewUnitTest.pro
YUViewUnitTest/common/: EnumMapperTest.cpp  FormattingTest.cpp  TemporaryFile.cpp  TemporaryFile.h  Testing.cpp  Testing.h
YUViewUnitTest/filesource/: DataSourceLocalFileTest.cpp  FileSourceAnnexBTest.cpp  filesource.pro  guessFormatFromFilenameTest.cpp
YUViewUnitTest/helper/: MyClass.cpp  MyClass.h  YUVFramesProvider.cpp  YUVFramesProvider.h  YUVGenerator.cpp  YUVGenerator.h  helper.pro
YUViewUnitTest/helper2/: YUVFramesProvider.h  helper.pro
YUViewUnitTest/parser/: parser.pro
YUViewUnitTest/src/: tst_yuviewtest.cpp
YUViewUnitTest/statistics/: CheckFunctions.cpp  CheckFunctions.h  StatisticsDataTest.cpp  StatisticsFileCSVTest.cpp  StatisticsFileCSVTest.pro  StatisticsFileVTMBMSTest.cpp  StatisticsFileVTMBMSTest.pro  statistics.pro
YUViewUnitTest/video/: PixelFormatRGBGuessTest.cpp  PixelFormatRGBTest.cpp  PixelFormatYUVGuessTest.cpp  PixelFormatYUVGuessTest.pro  PixelFormatYUVTest.cpp  VideoHandlerDifferenceTest.cpp  VideoHandlerDifferenceTest.pro  VideoHandlerYUVTest.cpp  VideoHandlerYUVTest.pro  YUVPixelFormatGuessTest.cpp  YUVPixelFormatGuessTest.pro  YUVPixelFormatTest.cpp  YUVPixelFormatTest.pro  rgbPixelFormatTest.cpp  rgbPixelFormatTest.pro  video.pro  yuvPixelFormatGuessTest.cpp  yuvPixelFormatGuessTest.pro  yuvPixelFormatTest.cpp  yuvPixelFormatTest.pro
(+1682 files in other folders)
